@@ -116,10 +116,14 @@ issues:
     - "Function 'Check' has too many statements"
     - "Function 'Check' is too long"
     - "Function 'fetchProcs' is too long"
+    - "Function 'buildListMacros' is too long"
     - "Function 'fetchProcs' has too many statements"
+    - "Function 'ReplaceConditionals' has too many statements"
     - "cognitive complexity .* of func .*.Check"
     - "cognitive complexity .* of func .*conditionAdd"
     - "cognitive complexity .* of func .*.matchSingle"
+    - "cognitive complexity .* of func .*splitToken"
+    - "cognitive complexity .* of func .*ReplaceConditionals"
     - "Function 'matchSingle' has too many statements"
     - "cyclomatic complexity .* of func .*.matchSingle"
     - "Function 'ParseINI' has too many statements"
