@@ -59,6 +59,7 @@ func TestMacroToken(t *testing.T) {
 		{In: "...'$(seconds)'...", Expect: []string{"...'", "$(seconds)", "'..."}},
 		{In: "... $(seconds | 's/a/b/' ) ...", Expect: []string{"... ", "$(seconds | 's/a/b/' )", " ..."}},
 		{In: "... $(var | 's/\\)//' ) ...", Expect: []string{"... ", "$(var | 's/\\)//' )", " ..."}},
+		{In: "{{ IF condition }}yes$(macro){{ ELSE }}$(other)no{{ END }}", Expect: []string{"{{ IF condition }}", "yes", "$(macro)", "{{ ELSE }}", "$(other)", "no", "{{ END }}"}},
 	}
 
 	splitBy := map[string]string{
@@ -66,10 +67,36 @@ func TestMacroToken(t *testing.T) {
 		"${": "}",
 		"%(": ")",
 		"%{": "}",
+		"{{": "}}",
 	}
 	for i, tst := range tests {
 		token, err := splitToken(tst.In, splitBy)
 		require.NoErrorf(t, err, "[%d] text: %s", i, tst.In)
 		assert.Equalf(t, tst.Expect, token, "replacing: %s", tst.In)
+	}
+}
+
+func TestMacroConditionals(t *testing.T) {
+	macros := map[string]string{
+		"seconds":   "130",
+		"unix time": "1700834034",
+		"float":     "170.05",
+		"yesterday": fmt.Sprintf("%d", time.Now().Add(-24*time.Hour).Unix()),
+	}
+
+	tests := []struct {
+		In     string
+		Expect string
+	}{
+		{In: "{{ IF seconds > 120 }}yes: $(seconds){{ ELSE }}no{{ END }}", Expect: "yes: 130"},
+		{In: "{{ IF seconds > 180 }}yes: $(seconds){{ ELSIF seconds > 120 }}elsif: $(seconds){{ ELSE }}no{{ END }}", Expect: "elsif: 130"},
+		{In: "{{ IF seconds > 120 }}outer$(seconds)-{{ IF seconds > 150 }}this not{{ ELSE }}inner$(seconds){{ END }}{{ ELSE }}also not{{ END }}", Expect: "outer130-inner130"},
+	}
+
+	for _, tst := range tests {
+		res, err := ReplaceConditionals(tst.In, macros)
+		require.NoError(t, err)
+		res = ReplaceMacros(res, macros)
+		assert.Equalf(t, tst.Expect, res, "replacing: %s", tst.In)
 	}
 }
