@@ -9,6 +9,7 @@ next:
          - update windows build framework to wix 3.14
          - improve wmi stability
          - add regexp replacement macro post processor
+         - add if/else conditionals to *-syntax templates
 
 0.19     Wed Feb 28 00:09:39 CET 2024
          - write startup errors to default logfile
